[package]
name = "ccanvas-scroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libccanvas = { version = "0.2", features = [ "layout", "common" ]}
tokio = { version = "1", features = [ "macros" ]}
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
